updated versions to 1.21.11, trying adding forge update